# TTRPG-C1

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  SPEC.md  deny.toml  package.json  ttrpg_companion_mvp_strategy_v3_967ef99d-705f-40ad-ac73-71ed97594cf0.md.txt
.github/workflows/: ci.yml
src-svelte/: index.html  package.json  tailwind.config.js  vite.config.js
src-svelte/src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  hotkeys.rs  lib.rs  main.rs  startup.rs  state.rs
src-tauri/src/audio/: capture.rs  engine.rs  mod.rs  playback.rs
src-tauri/src/commands/: mod.rs  session.rs  training.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  repository.rs
src-tauri/src/detection/: fsm.rs  keyword.rs  logger.rs  mod.rs  pipeline.rs  speaker.rs  vad.rs
src-tauri/src/dsp/: mod.rs  processing.rs
src-tauri/src/inference/: emotion.rs  mod.rs  whisper.rs
src-tauri/src/ml/: mod.rs  ort_env.rs  speaker_model.rs  vad_model.rs
src-tauri/src/orchestrator/: mod.rs  state.rs
src-tauri/src/profile/: mod.rs  storage.rs  voice.rs
src-web/: index.html  main.js  styles.css
