[package]
name = "ttrpg_companion"
version = "0.2.0"
edition = "2021"
description = "Real-time audio companion app for tabletop RPG sessions"
authors = ["vkolyvas"]
license = "MIT"

[lib]
name = "ttrpg_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Audio
cpal = "0.15"
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
rubato = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# File watching
notify = "6.1"

# Encrypted storage
keyring = "3"

# ONNX Runtime (ML inference) - use prerelease version
ort = "2.0.0-rc.11"

# Global hotkeys
global-hotkey = "0.6"

# Async channels
flume = "0.11"

# Utilities
dirs = "5.0"
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(feature = "whisper")'.dependencies]
whisper-rs = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
whisper = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
